; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libpcap/extr_nametoaddr.c_pcap_nametoeproto.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libpcap/extr_nametoaddr.c_pcap_nametoeproto.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.eproto = type { i64, i32 }

@eproto_db = common dso_local global %struct.eproto* null, align 8
@PROTO_UNDEF = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pcap_nametoeproto(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca %struct.eproto*, align 8
  store i8* %0, i8** %3, align 8
  %5 = load %struct.eproto*, %struct.eproto** @eproto_db, align 8
  store %struct.eproto* %5, %struct.eproto** %4, align 8
  br label %6

6:                                                ; preds = %22, %1
  %7 = load %struct.eproto*, %struct.eproto** %4, align 8
  %8 = getelementptr inbounds %struct.eproto, %struct.eproto* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %25

11:                                               ; preds = %6
  %12 = load %struct.eproto*, %struct.eproto** %4, align 8
  %13 = getelementptr inbounds %struct.eproto, %struct.eproto* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i8*, i8** %3, align 8
  %16 = call i64 @strcmp(i64 %14, i8* %15)
  %17 = icmp eq i64 %16, 0
  br i1 %17, label %18, label %22

18:                                               ; preds = %11
  %19 = load %struct.eproto*, %struct.eproto** %4, align 8
  %20 = getelementptr inbounds %struct.eproto, %struct.eproto* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 8
  store i32 %21, i32* %2, align 4
  br label %27

22:                                               ; preds = %11
  %23 = load %struct.eproto*, %struct.eproto** %4, align 8
  %24 = getelementptr inbounds %struct.eproto, %struct.eproto* %23, i64 1
  store %struct.eproto* %24, %struct.eproto** %4, align 8
  br label %6

25:                                               ; preds = %6
  %26 = load i32, i32* @PROTO_UNDEF, align 4
  store i32 %26, i32* %2, align 4
  br label %27

27:                                               ; preds = %25, %18
  %28 = load i32, i32* %2, align 4
  ret i32 %28
}

declare dso_local i64 @strcmp(i64, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
